flapivor/tests/m3/hopix/typechecker/good/34-recursive-datatype.hopix
type L = N | C (Int, L)

val a_list : L = C<> (1, C<> (2, C<> (3, N<>)))