flapivor/tests/m3/hopix/typechecker/bad/14-invalid-arithmetic-comparison-06.hopix
val main : Int = 0 <? (1 <? 2)